k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dairy-service
spec:
  type: NodePort
  selector:
    app: dairy-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30007
